feat : profile react and fix auth
