# laravel/storage/api-docs/api_doc.json
@@ -2361,22 +2361,10 @@
                 }
             }
         },
-        "/profile/{user_id}": {
+        "/profile": {
             "get": {
                 "summary": "Get user profile",
                 "tags": ["Authenticated", "Profile"],
-                "parameters": [
-                    {
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true,
-                        "description": "User ID",
-                        "schema": {
-                            "type": "integer",
-                            "example": 1
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Success message response",
